Fix headings and card caption color on dark mode
refs #780

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1817,11 +1817,12 @@ html.dark-mode .no-image .author-social-link a {
     color: rgba(255, 255, 255, 0.75);
 }
 
-html.dark-mode .post-full-content h1,
-html.dark-mode .post-full-content h2,
-html.dark-mode .post-full-content h3,
-html.dark-mode .post-full-content h4,
-html.dark-mode .post-full-content h6 {
+html.dark-mode .gh-content h1,
+html.dark-mode .gh-content h2,
+html.dark-mode .gh-content h3,
+html.dark-mode .gh-content h4,
+html.dark-mode .gh-content h5,
+html.dark-mode .gh-content h6 {
     color: rgba(255, 255, 255, 0.9);
 }
 
@@ -1852,7 +1853,7 @@ html.dark-mode .post-full-content hr:after {
     box-shadow: var(--color-darkmode) 0 0 0 5px;
 }
 
-html.dark-mode .post-full-content figcaption {
+html.dark-mode .gh-content figcaption {
     color: rgba(255, 255, 255, 0.6);
 }
 
